improved link legibility + removed contributions (security concerns)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             Encrypted URL
                         </span>
                         <div id='display-url' class='urlbox'>
-                            <em>URL:</em><a href='#' class='url'></a>
+                            <em class='important'>URL:</em><a href='#' target='_blank' class='url important'></a>
                             <div class='status'>
                                 Size: <em class='js-url-length'>284</em> Encrypted: <em class='js-url-encrypted'>No</em>
                             </div>
@@ -120,7 +120,6 @@
                 <a href='http://frederic.vanderessen.com'><i class='icon-rss'></i> Blog</a>
                 <a href='http://twitter.com/fvdsn'><i class='icon-twitter-sign'></i> Twitter</a>
                 <a href='http://github.com/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
-                <a href='#contribute'><i class='icon-thumbs-up'></i> Contribute</a>
             </nav>
             <div class='page faq'>
                     <h3>What is CryptoLink ?</h3>
@@ -153,29 +152,6 @@
                     </p><p>
                     There is unfortunately much less room inside a QR-Code.
                     </p>
-                    <h3>Contributions</h3>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="XWN9JBWMUX2QY">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/BE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                    <p>TODO: Bitcoin</p>
-                   <script src="http://coinwidget.com/widget/coin.js"></script>
-                    <script>
-                    CoinWidgetCom.go({
-                        wallet_address: "1CtfKBb1iZyhejGRM7X6Hdb6xC7NTeox4W"
-                        , currency: "bitcoin"
-                        , counter: "hide"
-                        , alignment: "bc"
-                        , qrcode: true
-                        , auto_show: false
-                        , lbl_button: "Donate"
-                        , lbl_address: "CryptoLink's Bitcoin Address:"
-                        , lbl_count: "donations"
-                        , lbl_amount: "BTC"
-                    });
-                    </script> 
             </div>
             <div class='page footer'>
                 MIT Licensed by <a href='http://frederic.vanderessen.com'>Frédéric van der Essen</a>
