fix image upload for firefox and IE

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <span></span>
                     <div class='textinput fixed hidden' id='editor-html'></div>
 
+                    <input type='file' class='hidden' id='img-selector'></input>
                     <div class='imageuploader hidden' id='editor-img'>
                         <div class='userimages'></div>
                         <div class='dropinvite'>
@@ -81,7 +82,6 @@
                             <p>Choose a Picture</p>
                         </div>
                         <div id='img-error' class='textinput invalid hidden'>Error</div>
-                        <input type='file' id='img-selector'></input>
                     </div>
 
                     <input id='password' class='textinput' type='password' placeholder='Password'></input>
