improved the faq

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <a href='http://github.com/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
             </nav>
             <div class='page faq'>
-                    <h3>What is CryptoLink ?</h3>
+                    <h3>What's CryptoLink ?</h3>
                     <p>CryptoLink is a open source web application that allows you to easily encrypt 
                     and share text messages, websites and pictures with a high level of security 
                     and privacy. 
@@ -132,7 +132,7 @@
                     password. There is nothing to install, and it works on almost every device.
                     </p><p>
                     Cryptolink doesn't know anything about your message. It doesn't host it, it 
-                    doesn't know you encrypted it and neither does it know when or if you decrypt it. 
+                    doesn't know you encrypted it and neither does it know when you decrypt it. 
                     This means we can let you do whatever you want with CryptoLink and you can rest
                     assured that as long as you have the link, you have your data.
                     <h3>How secure are cryptolinks?</h3>
@@ -142,15 +142,17 @@
                     Cryptolinks are encrypted with AES, one of the most secure encryption algorithm available. But good
                     encryption does not protect against easily guessable passwords; with the help of a supercomputer, a 
                     hacker can guess millions of passwords a second. It is 
-                    therefore important for you to choose a good password. For this CryptoLink incorporates a very powerful 
-                    password strength checker that gives solid advice. that you should follow. 
+                    therefore important for you to choose a good password. Following CryptoLink's password security
+                    advice ensures that your data is safe for the next century.
                     </p><p>
                     <h3>How much data can I put in a cryptolink?</h3>
-                    <p>Most browsers allows you to put several megabytes of data inside a link, and that
-                    is enough for a lot of applications. The current bottleneck is the speed of the 
-                    compression algorithm, where there is much room for improvement. 
+                    <p>
+                    Most browsers allow you to put several megabytes of data inside a link and that
+                    is enough for a lot of applications. And by most browsers I mean  every
+                    browser but Internet Explorer who chokes after a bit more than two thousand characters.
                     </p><p>
-                    There is unfortunately much less room inside a QR-Code.
+                    QR-Codes can encode up to ~2900 characters (more than IE!) but at those sizes they are not
+                    really that practical.
                     </p>
             </div>
             <div class='page footer'>
