fix github link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <nav class='page links'>
                 <a href='http://frederic.vanderessen.com'><i class='icon-rss'></i> Blog</a>
                 <a href='http://twitter.com/fvdsn'><i class='icon-twitter-sign'></i> Twitter</a>
-                <a href='http://github.com/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
+                <a href='http://www.github.com/fvdsn/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
             </nav>
             <div class='page faq'>
                     <h3>What's CryptoLink ?</h3>
