more faq improvements

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     is enough for a lot of applications. And by most browsers I mean  every
                     browser but Internet Explorer who chokes after a bit more than two thousand characters.
                     </p><p>
-                    QR-Codes can encode up to ~2900 characters (more than IE!) but at those sizes they are not
+                    QR-Codes can encode up to ~2900 characters but at those sizes they are not
                     really that practical.
                     </p>
             </div>
