--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src="js/vendor/ace/ace.js"></script>
         <script src="js/vendor/zxcvbn-async.js"></script>
         <script src="js/vendor/jquery.qrcode-0.6.0.min.js"></script>
+        <script src="js/vendor/ZeroClipboard.min.js"></script>
         <script src="js/cryptolink.js"></script>
         <script src="js/gui.js"></script>
         
@@ -103,6 +104,7 @@
                         </span>
                         <div id='display-url' class='urlbox'>
                             <em class='important'>URL:</em><a href='#' target='_blank' class='url important'></a>
+                            <span id='copyurl' alt='Copy URL to Clipboard'><i class='icon-copy'></i></span>
                             <div class='status'>
                                 Size: <em class='js-url-length'>284</em> Encrypted: <em class='js-url-encrypted'>No</em>
                             </div>
