--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>encrypting document ...</p>
             </div>
         </div>
-        <div class='primary'>
+        <article class='primary'>
             <div class='page main'>
                 <div class='pagetitle'>
                     <img src='img/logo.png' alt="CryptoLink's Logo">
@@ -95,14 +95,14 @@
                 </div>
 
             </div>
-        </div>
-        <div class='secondary'>
+        </article>
+        <article class='secondary noprint'>
             <nav class='page links'>
                 <a href='http://frederic.vanderessen.com'><i class='icon-rss'></i> Blog</a>
                 <a href='http://twitter.com/fvdsn'><i class='icon-twitter-sign'></i> Twitter</a>
                 <a href='http://www.github.com/fvdsn/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
             </nav>
-            <div class='page faq'>
+            <section class='page'>
                     <h3>What's CryptoLink ?</h3>
                     <p>CryptoLink is a open source web application that allows you to easily encrypt 
                     and share text messages, websites and pictures with a high level of security 
@@ -135,11 +135,11 @@
                     QR-Codes can encode up to ~2900 characters but at those sizes they are not
                     really that practical.
                     </p>
-            </div>
-            <div class='page footer'>
+            </section>
+            <footer class='page footer'>
                 MIT Licensed by <a href='http://frederic.vanderessen.com'>Frédéric van der Essen</a>
-            </div>
-        </div>
+            </footer>
+        </article>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/jquery-1.9.1.min.js"></script>
         <script src="js/vendor/lz-string-1.3.0.js"></script>
