--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                             Encrypted URL
                         </span>
                         <div id='display-url' class='urlbox'>
-                            <em class='important'>URL:</em><a href='#' target='_blank' class='url important'></a>
+                            <em class='important url_prefix'>URL:</em>
                             <span id='copyurl' alt='Copy URL to Clipboard'><i class='icon-copy'></i></span>
+                            <a href='#' target='_blank' class='url important'></a>
                             <div class='status'>
                                 Size: <em class='js-url-length'>284</em> Encrypted: <em class='js-url-encrypted'>No</em>
                             </div>
