--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>CryptoLink</title>
         <meta name="description" content="Cryptolink allows you to easily and securely encrypt
         and decrypt messages, webpages and pictures, without requiring any software installation">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
