new security model: no more public links, only html pages can execute js (with a warning)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <span id='copyurl' alt='Copy URL to Clipboard'><i class='icon-copy'></i></span>
                             <a href='#' target='_blank' class='url important'></a>
                             <div class='status'>
-                                Size: <em class='js-url-length'>284</em> Encrypted: <em class='js-url-encrypted'>No</em>
+                                Size: <em class='js-url-length'>284</em> Executable: <em class='js-url-executable'>No</em>
                             </div>
                         </div>
                         <div id='display-qrcode' class='hidden'>
