convert big pictures to jpeg before encryption

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <script src="js/vendor/zxcvbn-async.js"></script>
         <script src="js/vendor/jquery.qrcode-0.6.0.min.js"></script>
         <script src="js/vendor/ZeroClipboard.min.js"></script>
+        <script src="js/vendor/jpeg.js"></script>
         <script src="js/cryptolink.js"></script>
         <script src="js/gui.js"></script>
     </body>
