--- a/index.html
+++ b/index.html
@@ -105,36 +105,34 @@
             </nav>
             <section class='page'>
                     <h3>What's CryptoLink ?</h3>
-                    <p>CryptoLink is a open source web application that allows you to easily encrypt 
-                    and share text messages, websites and pictures with a high level of security 
-                    and privacy. 
+                    <p>
+                    CryptoLink allows you to encrypt and share messages, documents, and pictures. 
+                    You just have to type your message, pick a password, and cryptolink will give you a link containing
+                    your now protected data. 
                     </p><p>
-                    More specifically, CryptoLink encrypts the data into a link (or URL). 
-                    All you have to do to decrypt your data is to follow the link and provide your
-                    password. There is nothing to install, and it works on almost every device.
+                    You can then send this link by email, Facebook, 
+                    Twitter, etc. Your recipients then click the link and provide the
+                    password. For those without the password reading your message is however impossible.
+                    And by impossible I mean even for the most ressourceful organisations.
                     </p><p>
-                    Cryptolink doesn't know anything about your message. It doesn't host it, it 
-                    doesn't know you encrypted it and neither does it know when you decrypt it. 
-                    This means we can let you do whatever you want with CryptoLink and you can rest
+                    Or you could save the link in your favorites &mdash; so you can easily access it later &mdash; 
+                    and protect its content from phone or laptop thiefs. Or you could 
+                    print the generated QR-Code, and store valuable information in your wallet or paper documents. 
+                    </p><p>
+                    And the best part is that Cryptolink doesn't host or know anything about your messages. 
+                    This means I can let you do whatever you want with CryptoLink. And you can rest
                     assured that as long as you have the link, you have your data.
-                    <h3>How secure are cryptolinks?</h3>
+                    <h3>How secure is CryptoLink?</h3>
                     <p>
-                    First, keep in mind that CryptoLink is beta software with all the usual warnings it implies. 
+                    The data is encrypted with AES, one of the most secure encryption algorithm available. If you follow 
+                    the password checker's recommendations, your data will be protected for the next century.
                     </p><p>
-                    Cryptolinks are encrypted with AES, one of the most secure encryption algorithm available. But good
-                    encryption does not protect against easily guessable passwords; with the help of a supercomputer, a 
-                    hacker can guess millions of passwords a second. It is 
-                    therefore important for you to choose a good password. Following CryptoLink's password security
-                    advice ensures that your data is safe for the next century.
+                    Sadly, CryptoLink does not yet support HTTPS. Without it, an attacker could provide you
+                    a fake version of cryptolink when you visit this website, and have access to all your data. 
                     </p><p>
-                    <h3>How much data can I put in a cryptolink?</h3>
-                    <p>
-                    Most browsers allow you to put several megabytes of data inside a link and that
-                    is enough for a lot of applications. And by most browsers I mean  every
-                    browser but Internet Explorer who chokes after a bit more than two thousand characters.
-                    </p><p>
-                    QR-Codes can encode up to ~2900 characters but at those sizes they are not
-                    really that practical.
+                    Supporting HTTPS is very simple; it only requires me to spend money. That I don't have.
+                    Thus if you find CryptoLink interesting or useful, please make a donation, any amount
+                    will help. 
                     </p>
             </section>
             <footer class='page footer'>
