usability improvements etc.

--- a/index.html
+++ b/index.html
@@ -124,17 +124,24 @@
                     assured that as long as you have the link, you have your data.
                     <h3>How secure is CryptoLink?</h3>
                     <p>
-                    The data is encrypted with AES, one of the most secure encryption algorithm available. If you follow 
-                    the password checker's recommendations, your data will be protected for the next century.
-                    </p><p>
-                    Sadly, CryptoLink does not yet support HTTPS. Without it, an attacker could provide you
-                    a fake version of cryptolink when you visit this website, and have access to all your data. 
-                    </p><p>
-                    Supporting HTTPS is very simple; it only requires me to spend money. That I don't have.
-                    Thus if you find CryptoLink interesting or useful, please make a donation, any amount
-                    will help. 
+                    The data is encrypted with AES, one of the most secure encryption algorithm available. 
+                    But for the encryption to be effective you need to provide a good password, so it is very
+                    important to follow the recommandations of the built-in password checker.
                     </p>
+                    <p>
+                    
+                    </p>
+                    <!--<div class='centered'>
+                        <span class='textbutton' id='#paypal'>PayPal</span>
+                        <span class='textbutton' id='#bitcoin' >Bitcoin</span>
+                    </div>
+                    -->
             </section>
+            <nav class='page links'>
+                <a href='http://frederic.vanderessen.com'><i class='icon-rss'></i> Blog</a>
+                <a href='http://twitter.com/fvdsn'><i class='icon-twitter-sign'></i> Twitter</a>
+                <a href='http://www.github.com/fvdsn/cryptolink'><i class='icon-github-sign'></i> GitHub</a>
+            </nav>
             <footer class='page footer'>
                 MIT Licensed by <a href='http://frederic.vanderessen.com'>Frédéric van der Essen</a>
             </footer>
