--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <script src="js/vendor/jquery.qrcode-0.6.0.min.js"></script>
         <script src="js/vendor/ZeroClipboard.min.js"></script>
         <script src="js/vendor/jpeg.js"></script>
+        <script src="js/vendor/fastclick.js"></script>
         <script src="js/cryptolink.js"></script>
         <script src="js/gui.js"></script>
     </body>
