new moto, removing useless info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class='pagetitle'>
                     <img src='img/logo.png' alt="CryptoLink's Logo">
                     <h1>CryptoLink</h1>
-                    <h2>encrypt stuff the easy way</h2>
+                    <h2>encrypt stuff into links</h2>
                 </div>
 
                 <div class='cryptostuff'>
@@ -86,7 +86,7 @@
                             <span id='copyurl' alt='Copy URL to Clipboard'><i class='icon-copy'></i></span>
                             <a href='#' target='_blank' class='url important'></a>
                             <div class='status'>
-                                Size: <em class='js-url-length'>284</em> Executable: <em class='js-url-executable'>No</em>
+                                Length: <em class='js-url-length'>284</em>
                             </div>
                         </div>
                         <div id='display-qrcode' class='hidden'>
