--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     assured that as long as you have the link, you have your data.
                     <h3>How secure is CryptoLink?</h3>
                     <p>
-                    The data is encrypted with AES, one of the most secure encryption algorithm available. 
+                    The data is encrypted with AES, one of the most secure encryption algorithms available. 
                     But for the encryption to be effective you need to provide a good password, so it is very
                     important to follow the recommandations of the built-in password checker.
                     </p>
